--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
 </head>
 <body>
   <canvas></canvas>
-  <script src ="canvas.js"></script>
+  <script src ="mainCanvas.js"></script>
 </body>
 </html>
